--- a/app/src/main/res/layout/rotation_page.xml
+++ b/app/src/main/res/layout/rotation_page.xml
@@ -5,12 +5,12 @@
 
 
     <ImageView
-        android:layout_width="316dp"
-        android:layout_height="363dp"
+        android:layout_width="200dp"
+        android:layout_height="250dp"
         android:id="@+id/ic_launcher.png"
         android:src="@drawable/dish"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/TextView01"
+        android:layout_alignEnd="@+id/TextView01" />
 
     <TextView
         android:id="@+id/roll"
@@ -20,15 +20,15 @@
 
     <TextView
         android:id="@+id/pitch"
-        android:layout_width="52dp"
-        android:layout_height="35dp"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
         android:text="Angle:"
         android:layout_gravity="center_horizontal"
-        android:layout_alignBottom="@+id/buttonTest"
-        android:layout_alignEnd="@+id/ic_launcher.png"
-        android:layout_marginEnd="43dp"
         android:textColor="#2c97de"
-        android:textSize="15dp" />
+        android:textSize="40dp"
+        android:layout_marginTop="50dp"
+        android:layout_below="@+id/buttonTest"
+        android:layout_alignStart="@+id/angle" />
 
 
 
@@ -40,8 +40,10 @@
         android:layout_marginLeft="30dp"
         android:id="@+id/buttonTest"
         android:layout_gravity="left"
-        android:layout_toEndOf="@+id/roll"
-        android:layout_below="@+id/ic_launcher.png" />
+        android:textSize="12dp"
+        android:layout_alignBottom="@+id/ic_launcher.png"
+        android:layout_alignEnd="@+id/angle"
+        android:layout_marginBottom="28dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -49,18 +51,21 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Loading ..."
         android:id="@+id/TextView01"
-        android:layout_above="@+id/ic_launcher.png"
-        android:layout_centerHorizontal="true"
-        android:textColor="#0c49b3" />
+        android:textColor="#0c49b3"
+        android:textSize="40dp"
+        android:layout_below="@+id/angle"
+        android:layout_centerHorizontal="true" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="40dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="มุม"
+        android:text="Alignment"
         android:id="@+id/angle"
+        android:textSize="30dp"
+        android:textColor="#2beaff"
         android:layout_below="@+id/roll"
-        android:layout_alignParentStart="true" />
+        android:layout_alignEnd="@+id/ic_launcher.png" />
 
 
 </RelativeLayout>
