--- a/app/src/main/res/layout/rotation_page.xml
+++ b/app/src/main/res/layout/rotation_page.xml
@@ -15,9 +15,8 @@
         android:padding="22dp"
         android:id="@+id/ic_launcher.png"
         android:src="@drawable/dish"
-        android:layout_centerInParent="true"
         android:layout_centerVertical="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignStart="@+id/roll" />
 
     <TextView
         android:id="@+id/roll"
@@ -35,53 +34,54 @@
         android:textColor="#ec004a0e"
         android:textSize="25dp"
         android:textIsSelectable="false"
-        android:layout_above="@+id/buttonTest"
+        android:background="#9affbe"
+        android:layout_below="@+id/ic_launcher.png"
         android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:background="#9affbe" />
+        android:layout_toStartOf="@+id/buttonTest" />
 
 
 
     <Button
         style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="50dp"
         android:text="Set Zero"
         android:layout_marginLeft="30dp"
         android:id="@+id/buttonTest"
         android:layout_gravity="left"
         android:textSize="12dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true" />
+        android:background="#ff336d"
+        android:layout_alignTop="@+id/pitch"
+        android:layout_alignEnd="@+id/ic_launcher.png" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Loading ..."
-        android:gravity="center"
         android:id="@+id/TextView01"
         android:textColor="#fff6ee"
         android:textSize="25dp"
         android:autoText="false"
         android:background="#8a0092ff"
         android:layout_alignParentStart="true"
+        android:layout_above="@+id/ic_launcher.png"
         android:layout_below="@+id/angle"
-        android:layout_alignEnd="@+id/buttonTest"
-        android:layout_above="@+id/ic_launcher.png" />
+        android:gravity="center"
+        android:layout_alignParentEnd="true" />
 
     <TextView
         android:layout_width="250dp"
         android:layout_height="40dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="   Alignment"
-        android:gravity="center"
-        android:textColor="#d70008ff"
+        android:gravity="left|center"
+        android:textColor="#d70f0f0f"
         android:id="@+id/angle"
-        android:textSize="25dp"
-        android:background="#f4fff5"
-        android:layout_alignEnd="@+id/ic_launcher.png"
-        android:layout_alignParentStart="true" />
+        android:textSize="26dp"
+        android:background="#00ffe7"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
 
 
 </RelativeLayout>
